Upped version to 0.0985. added is_root to account and web page updates. file reading much faster

--- a/yote_root/html/Todo.html
+++ b/yote_root/html/Todo.html
@@ -12,6 +12,9 @@
     <script src="/yote/js/yote.util.js"></script>
     <link href="/yote.css" rel="stylesheet" type="text/css" media="all" />
     <link href="/css/main.css" rel="stylesheet" type="text/css" media="all" />
+
+    <META NAME="Author" CONTENT="Eric Wolf, coyocanid@gmail.com">
+
     <script>
     $().ready(function(){
 
