--- a/yote_root/html/program.html
+++ b/yote_root/html/program.html
@@ -9,6 +9,9 @@
 
     <script src="/yote/js/yote.js"></script>
     <link href="/yote.css" rel="stylesheet" type="text/css" media="all" />
+
+    <META NAME="Author" CONTENT="Eric Wolf, coyocanid@gmail.com">
+
     <script>
     $().ready(function(){
     var $window = $(window);
