--- a/yote_root/html/quickstart.html
+++ b/yote_root/html/quickstart.html
@@ -13,6 +13,8 @@
     <link href="/yote.css" rel="stylesheet" type="text/css" media="all" />
     <link href="/css/main.css" rel="stylesheet" type="text/css" media="all" />
 
+    <META NAME="Author" CONTENT="Eric Wolf, coyocanid@gmail.com">
+
     <STYLE>
       .overlesson { min-width: 900px; display:inline;}
       .lesson    { border: 0; }
