--- a/yote_root/html/index.html
+++ b/yote_root/html/index.html
@@ -13,6 +13,8 @@
     <link href="/yote.css" rel="stylesheet" type="text/css" media="all" />
     <link href="/css/main.css" rel="stylesheet" type="text/css" media="all" />
 
+    <META NAME="Author" CONTENT="Eric Wolf, coyocanid@gmail.com">
+
     <STYLE>
       .widget    { background-color: rgba( 255,255,255,.2 ); margin-bottom: 10px; padding:5px; }
       .c_name    { font-style: italic; font-family: sans-serif; font-size: large; }
