--- a/yote_root/html/server_docs.html
+++ b/yote_root/html/server_docs.html
@@ -12,6 +12,9 @@
     <script src="/yote/js/yote.util.js"></script>
     <link href="/yote.css" rel="stylesheet" type="text/css" media="all" />
     <link href="/css/main.css" rel="stylesheet" type="text/css" media="all" />
+
+    <META NAME="Author" CONTENT="Eric Wolf, coyocanid@gmail.com">
+
     <script>
     $().ready(function(){
 
