updated website. added new logo

--- a/yote_root/html/Todo.html
+++ b/yote_root/html/Todo.html
@@ -41,10 +41,12 @@
   <BODY>
 
     <DIV class="header">
-	<img src="yotelogo.png">
-	<UL id="top_nav" class="nav"></UL>
-        <DIV class="login logged_in" id="logged_in_status"></DIV>
-        <DIV id="msg_div"></DIV>
+      <A href="/index.html" style="display:block">
+	<img height="70px" width="151px" src="yotelogo.png">
+      </A>
+      <UL id="top_nav" class="nav"></UL>
+      <DIV class="login logged_in" id="logged_in_status"></DIV>
+      <DIV id="msg_div"></DIV>
     </DIV>
 
     <SECTION>
