--- a/yote_root/html/program.html
+++ b/yote_root/html/program.html
@@ -26,7 +26,9 @@
   <BODY data-spy="scroll" data-target="#navcol" >
     <DIV class="navbar navbar-fixed-top navbar-inverse">
       <DIV class="navbar-inner">
-	<A class="brand"><img src="yotelogo.png"></A>
+	<A href="/index.html" style="display:block">
+	  <img height="70px" width="151px" src="yotelogo.png">
+	</A>
 	<UL class="nav">
 	  <LI><a href="index.html">About</a></LI>
 	  <LI class="active"><A href="install.html">Install</A></LI>
