--- a/yote_root/html/quickstart.html
+++ b/yote_root/html/quickstart.html
@@ -477,10 +477,12 @@ my $from_ip =       $env-&gt;{ REMOTE_ADDR };\n\
   <BODY>
 
     <DIV class="header">
-	<img src="yotelogo.png">
-	<UL id="top_nav" class="nav"></UL>
-        <DIV class="login logged_in" id="logged_in_status"></DIV>
-        <DIV id="msg_div"></DIV>
+      <A href="/index.html" style="display:block">
+	<img height="70px" width="151px" src="yotelogo.png">
+      </A>
+      <UL id="top_nav" class="nav"></UL>
+      <DIV class="login logged_in" id="logged_in_status"></DIV>
+      <DIV id="msg_div"></DIV>
     </DIV>
     <SECTION>
       <h1>Quickstart</h1>
