--- a/yote_root/html/admin.html
+++ b/yote_root/html/admin.html
@@ -125,10 +125,12 @@ if we are our experiences then we are both sides of them.
   <BODY>
 
     <DIV class="header">
-	<img src="yotelogo.png">
-	<UL id="top_nav" class="nav"></UL>
-        <DIV class="login logged_in" id="logged_in_status"></DIV>
-        <DIV id="msg_div"></DIV>
+      <A href="/index.html" style="display:block">
+	<img height="70px" width="151px" src="yotelogo.png">
+      </A>
+      <UL id="top_nav" class="nav"></UL>
+      <DIV class="login logged_in" id="logged_in_status"></DIV>
+      <DIV id="msg_div"></DIV>
     </DIV>
     
     <DIV id="errpanel" class="err">Must be logged in with a root account to view this page.</div>
