--- a/yote_root/html/Todo.html
+++ b/yote_root/html/Todo.html
@@ -57,13 +57,12 @@
 	The following is a wish list of things to do including bug fixes and new features
       </p>
       <ul>
-	<li>Automatically create the root user login account and have its password be a configuration option.</li>
 	<li>Daemonize the yote_server script. The initial attempts failed due to threading issues, but it can be done.</li>
-	<li>Create an account management</li>
+	<li>Create an account management page</li>
 	<li>Create an object browsing page</li>
 	<li>Create an object browsing shell</li>
 	<li>Add FileHelper methods to update the file in question with a new value.</li>
-	<li>Consider changing the set capitaliziation uppercase convention in favor of a list defined in the object. </li>
+	<li>Add modperl ( at least simple modperl ) support.</li>
 	<li>Put together a cron that makes sense.</li>
       </ul>
     </SECTION>
