--- a/yote_root/html/yote/index.html
+++ b/yote_root/html/yote/index.html
@@ -57,7 +57,7 @@ $().ready( function() {
     }
 
     function to_news() {
-	$( '#main_panel_div' ).empty().append( "News goes here. lets remember to talk about xpaths " );
+	$( '#main_panel_div' ).empty().append( "News goes here. " );
     }
 
     function to_edit_news() {
